test-ci.ymlを修正する

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -19,6 +19,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: 'gradle'
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
       - name: Test with Gradle
         run: ./gradlew test
       - name: Slack Notification
