ローカルで実行権限を付与するようにする、:github:と:tekkun_move:を外す

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -35,7 +35,7 @@ jobs:
           --arg commit '<${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }} | ${{ github.sha }}>' '{
             attachments: [
               {
-                pretext: ":github: Test ${{ job.status }} :tekkun_move:",
+                pretext: "Test ${{ job.status }}",
                 color: $color,
                 fields: [
                   {
